Added all vectors for bo programs

--- a/bo/Makefile
+++ b/bo/Makefile
@@ -4,7 +4,7 @@ all:
 	gcc bo.c                       -o vulnerable-bo
 	gcc bo2.c                      -o vulnerable-bo2
 	gcc bo3.c -fno-stack-protector -o vulnerable-bo3
-	gcc bo4.c -fno-stack-protector -o vulnerable-bo4
+	gcc bo4.c  -o vulnerable-bo4
 	sudo chown dummy:dummy vulnerable-bo*
 	sudo chmod 755 vulnerable-bo*
 	sudo chmod u+s vulnerable-bo*	
