Added first files

--- a/exe1/Makefile
+++ b/exe1/Makefile
@@ -4,7 +4,7 @@ gen_data: gen_data.o
 	gcc gen_data.o -o gen_data
 
 process: process.o
-	gcc process.o -lpthread -o process
+	gcc process.o -o process
 
 
 %.o: %.c parameters.h
